[project]
name = "aisi-red-team-propensity-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aisitools",
    "hibayes",
    "inspect-ai>=0.3.200",
    "petri",
    "ruff>=0.15.7",
]

[tool.uv.sources]
petri = { git = "https://github.com/safety-research/petri" }
aisitools = { git = "ssh://git@github.com/AI-Safety-Institute/aisi-inspect-tools" }
hibayes = { git = "https://github.com/UKGovernmentBEIS/hibayes.git" }
